--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
     <div class='content'>
         <div class="slideshow-container">
-            <div class="slideshow">
+            <div class="slideshow" id="top">
                 <img src="images/workin_6.jpg" style="width:100%;height:90%">
             </div>
 
@@ -53,9 +53,9 @@
    
 
 
-        <a name="about-us"></a>
+        <a id="about-us"></a>
         <div class='table-row'>
-        <h2> About Us </h2>
+        <h2 id="about-us"> About Us </h2>
         <p class='normal-padding'> We are a community of developers, graphic
             designers, salespeople, consultants, lawyers, accountants and appraiser
             that want to create a welcoming environment for startups to thrive in.
@@ -68,8 +68,7 @@
  
 
 
-        <a name="facilities-and-perks"></a>
-        <div class='table-row'>
+        <div class='table-row' id="facilities-and-perks">
         <h2> Facilities and Perks </h2>
         <p class='normal-padding'> Our community enjoys many resources that we
             provide them with: </p>
@@ -87,8 +86,7 @@
 
 
 
-        <a name="prices"></a>
-        <div class='table-row'> 
+        <div class='table-row' id="prices"> 
         <h2> Prices </h2>
         <p> Prices to join our community depend how big your team is and what
             spaces you would all want to use: </p>
@@ -127,7 +125,7 @@
             <a href="https://www.facebook.com" target="_blank"><img
                 src="icons/facebook.png" height="50" width="50" alt="facebook                          icon"/></a> 
             <a href="https://www.instagram.com" target="_blank"><img 
-                src="icons/instagram.png" height="50 width="50" 
+                src="icons/instagram.png" height="50" width="50" 
                 alt="instagramicon"/></a>
             <a href="https://www.twitter.com" target="_blank"><img 
                 src="icons/twitter.png" height="50" width="50" alt="twitter 
@@ -135,7 +133,19 @@
         </div>
     </div>
 
+    <!-- Load jQuery -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+
     <script>
+      
+      $(document).on('click', 'a[href^="#"]', function (event) {
+          event.preventDefault();
+
+          $('html, body').animate({
+              scrollTop: $($.attr(this, 'href')).offset().top
+          }, 500);
+      });
+      
         window.onscroll = function() {stickyOnTop()};
 
         var header = document.getElementById("entire-website-header");
