Added mobile-friendly pictures, resized pictures workin_14, 15 and 7 for 1.5 aspect ratio

--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
         <div class='table-row black-background' id="about-us">
 
             <h2>About Us</h2>
-            <p id='lowbar'>&#x2581;</p>
+            <p id='lowbar'>&#x2594;</p>
 
             <p class='normal-padding'> We are a community of developers, graphic
                 designers, salespeople, consultants, lawyers, accountants and 
@@ -118,7 +118,7 @@
         <div class='container table-row gray-background' id="facilities-and-perks">
 
             <h2>Facilities and Perks</h2>
-            <p id='lowbar'>&#x2581;</p>
+            <p id='lowbar'>&#x2594;</p>
             
             <div>
                 <div class="perk-box">
@@ -166,7 +166,7 @@
 
         <div class='table-row black-background' id="prices"> 
             <h2>Prices</h2>
-            <p id='lowbar'>&#x2581;</p>
+            <p id='lowbar'>&#x2594;</p>
 
             <div class="pricing-box box1">
                 <h3 id='option-pricing-title'>Co-Working</h3>
@@ -197,27 +197,27 @@
         <div id="photos">
             <span class="photos-section">
                 <img src="images/workin_2.jpg" 
-                style="float:left;width:33.33%;height:270px">
+                style="float:left;width:33.33%;height:auto">
             </span>
             <span class="photos-section">
                 <img src="images/workin_14.jpg" u
-                style="float:left;width:33.33%;height:270px">
+                style="float:left;width:33.33%;height:auto">
             </span>
             <span class="photos-section">
                 <img src="images/workin_18.jpg"
-                style="float:left;width:33.33%;height:270px">
+                style="float:left;width:33.33%;height:auto">
             </span>
             <span class="photos-section">
-                <img src="images/workin_7.jpg" 
-                style="float:left;width:33.33%;height:270px">
+                <img src="images/workin_8.jpg" 
+                style="float:left;width:33.33%;height:auto">
             </span>
             <span class="photos-section">
                 <img src="images/workin_10.jpg" 
-                style="float:left;width:33.33%;height:270px">
+                style="float:left;width:33.33%;height:auto">
             </span>
             <span class="photos-section">
                 <img src="images/workin_15.jpg" 
-                style="float:left;width:33.33%;height:270px">
+                style="float:left;width:33.33%;height:auto">
             </span>
         </div>
 
@@ -225,7 +225,7 @@
 
         <div class='table-row gray-background' id="contact-us">
             <h2>Contact Us</h2>
-            <p id='lowbar'>&#x2581;</p>
+            <p id='lowbar'>&#x2594;</p>
 
             <div class="mapbox" id="googleMap"></div>
 
