--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
         initial-scale=1.0"> 
     <title>WorkIn</title>
     <link type="text/css" rel="stylesheet" href="style.css">
+    <link rel="stylesheet"
+        href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
     <link rel="apple-touch-icon" sizes="57x57" href="icons/fav/apple-icon-57x57.png">
     <link rel="apple-touch-icon" sizes="60x60" href="icons/fav/apple-icon-60x60.png">
@@ -48,9 +50,10 @@
 
 
 <body>
-    <nav id="entire-website-header"> 
+    <nav class="topnav" id="myTopnav"> 
         <h1>
-        <div class='logo-image'><a href="https://www.google.com"><img 
+        <div class='logo-image active'><a id="first-child" 
+            href="https://www.google.com"><img 
             src="icons/logo.png" height="65" width="165"></a>
         </div>
 
@@ -60,19 +63,14 @@
             <a href="#facilities-and-perks" class="button">Facilities and Perks</a>
             <a href="#prices" class="button">Prices</a>
             <a href="#contact-us" class="button">Contact Us</a>
+            <a href="javascript:void(0);" id="toggle-button" class="icon"
+                onclick="toggleTopnav()">
+                <i class="fa fa-bars"></i>
+            </a>
         </div>
         </h1>
     </nav>
 
-    <nav hidden id="entire-website-header-mobile">
-        <div id="flip">
-            <div class='logo-image'><a href="https://www.google.com"><img
-                src="icons/logo.png" height="32" width="82"></a>
-            </div>
-        </div>
-
-        <div id="panel">Hello world!</div>
-    </nav>
 
     <div class='content'>
         <div class="table-row slideshow-container">
@@ -115,7 +113,8 @@
  
 
 
-        <div class='container table-row gray-background' id="facilities-and-perks">
+        <div class='container table-row gray-background minimum-width'
+            id="facilities-and-perks">
 
             <h2>Facilities and Perks</h2>
             <p id='lowbar'>&#x2594;</p>
@@ -164,7 +163,7 @@
 
 
 
-        <div class='table-row black-background' id="prices"> 
+        <div class='table-row black-background minimum-width' id="prices"> 
             <h2>Prices</h2>
             <p id='lowbar'>&#x2594;</p>
 
@@ -194,7 +193,7 @@
 
 
 
-        <div id="photos">
+        <div id="photos" class="minimum-width">
             <span class="photos-section">
                 <img src="images/workin_2.jpg" 
                 style="float:left;width:33.33%;height:auto">
@@ -223,7 +222,7 @@
 
 
 
-        <div class='table-row gray-background' id="contact-us">
+        <div class='table-row gray-background minimum-width' id="contact-us">
             <h2>Contact Us</h2>
             <p id='lowbar'>&#x2594;</p>
 
@@ -270,7 +269,7 @@
       
         window.onscroll = function() {stickyOnTop()};
 
-        var header = document.getElementById("entire-website-header");
+        var header = document.getElementById("myTopnav");
         var sticky = header.offsetTop;
 
         var slideIndex = 0;
@@ -290,6 +289,15 @@
             }
             slides[slideIndex-1].style.display = "block";  
             setTimeout(showSlides, 4000); // Change image every 4 seconds
+        }
+
+        function toggleTopNav() {
+            var x = document.getElementById("myTopnav");
+            if (x.className === "topnav") {
+                x.className += " responsive";
+            } else {
+                x.className = "topnav";
+            }
         }
 
         function stickyOnTop() {
