Facilities and Perks done

--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
 
             <h2>Facilities and Perks</h2>
             <p class="lowbar">&#x2594;</p>
-
+<p class="groups-of-two">
             <div class="perk-box pb1">
                 <div><img src="icons/fully-furnished.png"></div>
                 <div class="perk-text">Fully Furnished</div> 
@@ -120,7 +120,8 @@
                 <div><img src="icons/conference-rooms.png"></div>
                 <div class="perk-text">Conference Rooms</div>
             </div>
-
+</p>
+<p class="groups-of-two">
             <div class="perk-box pb3">
                 <div><img src="icons/corporate-address.png"></div>
                 <div class="perk-text">Corporate Address</div>
@@ -130,7 +131,8 @@
                 <div><img src="icons/mailing-service.png"></div>
                 <div class="perk-text">Mailing Service</div>
             </div> 
-
+</p>
+<p class="groups-of-two">
             <div class="perk-box pb5">
                 <div><img src="icons/fiber-optic-internet.png"></div>
                 <div class="perk-text">Fiber Optic Internet</div>
@@ -139,6 +141,8 @@
                 <div><img src="icons/parking.png"></div>
                 <div class="perk-text">Parking</div>
             </div>
+</p>
+<p class="groups-of-two">
             <div class="perk-box pb7">
                 <div><img src="icons/coffee.png"></div>
                 <div class="perk-text">Coffee</div>
@@ -147,7 +151,7 @@
                 <div><img src="icons/copiers.png"></div>
                 <div class="perk-text">Copiers</div>
             </div>
-
+</p>
             <p class="extra-bottom-border-perks"></p>
         </div>
 
@@ -163,7 +167,7 @@
                 <span id='starting-price'>$150</span>
                 <p>per month</p>
                 <p id='price-description'> 
-                    <em>Get unlimited access to our open area, which includes 
+                    <em>Get unlimited access to our open area, which includes: 
                     single desks, paired desks, group tables, sofa lounge and
                     conference rooms. All perks are included. Just drop-in and
                     get WorkIn'. </em>
