Google Maps section (Contact us) done.

--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
 
             <div class="mapbox" id="googleMap"></div>
 
-            <div class="box">
+            <div class="contact-info-box">
                 E-mail: <br>
                 <a href="mailto:workin.suites@gmail.com" 
                     target="_top">workin.suites@gmail.com
