Pricing section made responsive to mobile devices.

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
             <h2>About Us</h2>
             <p class="lowbar">&#x2594;</p>
 
-            <p class='normal-padding'> We are a community of developers, graphic
+            <p> We are a community of developers, graphic
                 designers, salespeople, consultants, lawyers, accountants and 
                 appraiser that want to create a welcoming environment for startups 
                 to thrive in. We are new in the community, being established in 
@@ -105,12 +105,11 @@
  
 
 
-        <div class='table-row gray-background minimum-width'
+        <div class='table-row table-row-perks gray-background'
             id="facilities-and-perks">
 
             <h2>Facilities and Perks</h2>
             <p class="lowbar">&#x2594;</p>
-<p class="groups-of-two">
             <div class="perk-box pb1">
                 <div><img src="icons/fully-furnished.png"></div>
                 <div class="perk-text">Fully Furnished</div> 
@@ -120,8 +119,6 @@
                 <div><img src="icons/conference-rooms.png"></div>
                 <div class="perk-text">Conference Rooms</div>
             </div>
-</p>
-<p class="groups-of-two">
             <div class="perk-box pb3">
                 <div><img src="icons/corporate-address.png"></div>
                 <div class="perk-text">Corporate Address</div>
@@ -131,8 +128,6 @@
                 <div><img src="icons/mailing-service.png"></div>
                 <div class="perk-text">Mailing Service</div>
             </div> 
-</p>
-<p class="groups-of-two">
             <div class="perk-box pb5">
                 <div><img src="icons/fiber-optic-internet.png"></div>
                 <div class="perk-text">Fiber Optic Internet</div>
@@ -141,8 +136,6 @@
                 <div><img src="icons/parking.png"></div>
                 <div class="perk-text">Parking</div>
             </div>
-</p>
-<p class="groups-of-two">
             <div class="perk-box pb7">
                 <div><img src="icons/coffee.png"></div>
                 <div class="perk-text">Coffee</div>
@@ -151,43 +144,49 @@
                 <div><img src="icons/copiers.png"></div>
                 <div class="perk-text">Copiers</div>
             </div>
-</p>
             <p class="extra-bottom-border-perks"></p>
         </div>
 
 
 
-        <div class='table-row black-background minimum-width' id="prices"> 
+        <div class='table-row-prices black-background' id="prices"> 
             <h2>Prices</h2>
             <p class="lowbar">&#x2594;</p>
 
-            <div class="pricing-box black-background box1">
+            <div class="pricing-box pricing-box-1">
                 <h3 id='option-pricing-title'>Co-Working</h3>
                 <p id='starting-at'>Price:</p>
                 <span id='starting-price'>$150</span>
                 <p>per month</p>
                 <p id='price-description'> 
-                    <em>Get unlimited access to our open area, which includes: 
-                    single desks, paired desks, group tables, sofa lounge and
-                    conference rooms. All perks are included. Just drop-in and
-                    get WorkIn'. </em>
+                    <em>Get unlimited access to our open area, which includes:
+                    <ul>
+                        <li>&nbsp single desks</li>
+                        <li>&nbsp paired desks</li>
+                        <li>&nbsp group tables</li>
+                        <li>&nbsp sofa lounge</li>
+                        <li>&nbsp conference rooms</li>
+                    </ul>
+                    </em>
                 </p>
-
+                <p id='price-description' class='less-bottom-padding'>
+                    All perks are included. Just drop-in and <em>get
+                    WorkIn'</em>.
+                </p>
             </div> 
 
-            <div class="pricing-box black-background box1 no-left-border">
+            <div class="pricing-box pricing-box-2">
                 <h3 id='option-pricing-title'>Private Suites</h3>
                 <p id='starting-at'>Starting at:</p>
                 <span id='starting-price'>$500</span>
                 <p>per month</p>
-                <p id='price-description'> 
+                <p id='price-description'>
                     <em>Fully furnished 10x12 ft <sup>2</sup> offices with all the
-                    perks included and
-                    access to our co-working community.<br><br><br></em> 
+                    perks included and access to our co-working community.</em>
                 </p>
-
+                <p class='pricing-more-padding'>.</p>
             </div> 
-            <p class="extra-bottom-border-pricing"></p>
+            <p id='ref'> </p>
         </div>
 
 
@@ -221,7 +220,7 @@
 
 
 
-        <div class='table-row gray-background minimum-width' id="contact-us">
+        <div class='table-row table-row-perks gray-background' id="contact-us">
             <h2>Contact Us</h2>
             <p class="lowbar">&#x2594;</p>
 
