Final commit for responsive changes.

--- a/index.html
+++ b/index.html
@@ -193,28 +193,22 @@
 
         <div id="photos" class="black-background minimum-width">
             <span class="photos-section">
-                <img src="images/workin_2.jpg" 
-                style="float:left;width:33.33%;height:auto">
+                <img src="images/workin_8.jpg" id='extra-photos'> 
             </span>
             <span class="photos-section">
-                <img src="images/workin_14.jpg" u
-                style="float:left;width:33.33%;height:auto">
+                <img src="images/workin_14.jpg" id='extra-photos'>
             </span>
             <span class="photos-section">
-                <img src="images/workin_18.jpg"
-                style="float:left;width:33.33%;height:auto">
+                <img src="images/workin_18.jpg" id='extra-photos'>
             </span>
             <span class="photos-section">
-                <img src="images/workin_8.jpg" 
-                style="float:left;width:33.33%;height:auto">
+                <img src="images/workin_2.jpg" id='extra-photos'>
             </span>
             <span class="photos-section">
-                <img src="images/workin_10.jpg" 
-                style="float:left;width:33.33%;height:auto">
+                <img src="images/workin_10.jpg" id='extra-photos'>
             </span>
             <span class="photos-section">
-                <img src="images/workin_15.jpg" 
-                style="float:left;width:33.33%;height:auto">
+                <img src="images/workin_15.jpg" id='extra-photos'>
             </span>
         </div>
 
