Fixed introduction text alignment in screen.

--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
                 <span id='starting-price'>$500</span>
                 <p>per month</p>
                 <p id='price-description'>
-                    <em>Fully furnished 10x12 ft <sup>2</sup> offices with all the
+                    <em>Fully furnished 10' x 12' offices with all the
                     perks included and access to our co-working community.</em>
                 </p>
                 <p class='pricing-more-padding'>.</p>
