Changed photo resolution for lower size (faster load time), changed the side nav bar not to appear first hand, changed the style.css file to achieve this.

--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@
             Perks</a>
         <a href="#prices" onclick="closeNav();">Prices</a>
         <a href="#contact-us" onclick="closeNav();">Contact Us</a>
+        <p id="navbar-footer">Copyright &copy 2018, WorkIn. All Rights Reserved.</p>
     </div>
 
 
@@ -75,15 +76,18 @@
             </div>
 
             <div class="slideshow" id="top">
-                <img src="images/workin_6.jpg" style="width:100%;height:90%">
+                <img src="images/mobile-images/workin_6-web.jpg" 
+                    style="width:100%;height:90%">
             </div>
 
             <div class="slideshow">
-                <img src="images/workin_12.jpg" style="width:100%;height:90%">
+                <img src="images/mobile-images/workin_12-web.jpg" 
+                    style="width:100%;height:90%">
             </div>
 
             <div class="slideshow">
-                <img src="images/workin_5.jpg" style="width:100%;height:90%">    
+                <img src="images/mobile-images/workin_5-web.jpg" 
+                    style="width:100%;height:90%">    
             </div>
         </div>
    
@@ -195,22 +199,22 @@
 
         <div id="photos" class="black-background minimum-width">
             <span class="photos-section">
-                <img src="images/workin_8.jpg" id='extra-photos'> 
+                <img src="images/mobile-images/workin_8-web.jpg" id='extra-photos'> 
             </span>
             <span class="photos-section">
-                <img src="images/workin_14.jpg" id='extra-photos'>
+                <img src="images/mobile-images/workin_14-web.jpg" id='extra-photos'>
             </span>
             <span class="photos-section">
-                <img src="images/workin_18.jpg" id='extra-photos'>
+                <img src="images/mobile-images/workin_18-web.jpg" id='extra-photos'>
             </span>
             <span class="photos-section">
-                <img src="images/workin_2.jpg" id='extra-photos'>
+                <img src="images/mobile-images/workin_2-web.jpg" id='extra-photos'>
             </span>
             <span class="photos-section">
-                <img src="images/workin_10.jpg" id='extra-photos'>
+                <img src="images/mobile-images/workin_10-web.jpg" id='extra-photos'>
             </span>
             <span class="photos-section">
-                <img src="images/workin_15.jpg" id='extra-photos'>
+                <img src="images/mobile-images/workin_15-web.jpg" id='extra-photos'>
             </span>
         </div>
 
@@ -276,6 +280,7 @@
 
         function openNav() {
             document.getElementById("mySidenav").style.width = "250px";
+            document.getElementById("mySidenav").style.display = "block";
         }
 
         function closeNav() {
