--- a/index.html
+++ b/index.html
@@ -91,6 +91,17 @@
                 <img src="images/mobile-images/workin_5-web.jpg"
                     style="width:100%;height:90%">
             </div>
+
+            <div class="arrow-to-content">
+                <p class="arrow">
+                    <a href="#about-us">
+                        <i class="fa fa-angle-down"
+                            style="font-size:36px">
+                        </i>
+                    </a>
+                </p>
+            </div>
+
         </div>
 
 
