Refactored CSS. Modified map do displays full width when in mobile.

--- a/index.html
+++ b/index.html
@@ -235,8 +235,8 @@
         </div>
 
 
-
-        <div class='table-row table-row-perks gray-background' id="contact-us">
+        <div class='table-row-contact-us gray-background'>
+            <div id="contact-us"><br><br></div>
             <h2>Contact Us</h2>
             <p class="lowbar">&#x2594;</p>
 
