--- a/index.html
+++ b/index.html
@@ -264,7 +264,7 @@
 
     </div>
 
-    <div class='footer green-background'>
+    <div class='footer'>
         <p class='footer-text'> Copyright &copy 2018, WorkIn. All Rights Reserved.
         </p>
     </div>
