--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
 <head>
     <meta charset="UTF-8" name="viewport" content="width=device-width,
         initial-scale=1.0">
+    <meta name="google-site-verification"
+        content="HM-AEeXPwQDM4A7gQtKbFoMC1uhHqL-nVbD1wu7L_Js" />
     <title>WorkIn</title>
     <link type="text/css" rel="stylesheet" href="style.css">
 
@@ -275,15 +277,12 @@
     <script>
         var header = document.getElementById("myTopnav");
         var sticky = header.offsetTop;
-
         var slideIndex = 0;
         showSlides();
-
         function showSlides() {
             var i;
             var slides = document.getElementsByClassName("slideshow");
             header.classList.add("sticky");
-
             for (i = 0; i < slides.length; i++) {
                 slides[i].style.display = "none";
             }
@@ -294,12 +293,10 @@
             slides[slideIndex-1].style.display = "block";
             setTimeout(showSlides, 4000); // Change image every 4 seconds
         }
-
         function openNav() {
             document.getElementById("mySidenav").style.width = "250px";
             document.getElementById("mySidenav").style.display = "block";
         }
-
         function closeNav() {
             document.getElementById("mySidenav").style.width = "0";
         }
