changed the WorkIn logo href value to https://workinsuites.com

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 <body>
     <div class="topnav" id="myTopnav">
         <a class='logo-image' id="first-child"
-            href="https://www.workinsuites.com"><img
+            href="https://workinsuites.com"><img
             src="icons/logo.png" height="65" width="165"></a>
         <a href="#contact-us" class="button">Contact Us</a>
         <a href="#prices" class="button">Prices</a>
