Corrected HTML and CSS errors that were made available thanks to HTML and CSS validators!

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     <div class="topnav" id="myTopnav">
         <a class='logo-image' id="first-child"
             href="https://workinsuites.com"><img
-            src="icons/logo.png" height="65" width="165"></a>
+            src="icons/logo.png" alt="WorkIn Logo" height="65" width="165"></a>
         <a href="#contact-us" class="button">Contact Us</a>
         <a href="#prices" class="button">Prices</a>
         <a href="#facilities-and-perks" class="button">Facilities and Perks</a>
@@ -68,7 +68,7 @@
         <a href="#prices" onclick="closeNav();">Prices</a>
         <a href="#contact-us" onclick="closeNav();">Contact Us</a>
         <p id="navbar-footer">
-            Copyright &copy 2018, WorkIn. All Rights Reserved.
+            Copyright &copy; 2018, WorkIn. All Rights Reserved.
         </p>
     </div>
 
@@ -81,16 +81,19 @@
 
             <div class="slideshow" id="top">
                 <img src="images/mobile-images/workin_6-web.jpg"
+                    alt="WorkIn co-working lounge area"
                     style="width:100%;height:90%">
             </div>
 
             <div class="slideshow">
                 <img src="images/mobile-images/workin_12-web.jpg"
+                    alt="WorkIn suites with desks and window view"
                     style="width:100%;height:90%">
             </div>
 
             <div class="slideshow">
                 <img src="images/mobile-images/workin_5-web.jpg"
+                    alt="WorkIn co-working desk area"
                     style="width:100%;height:90%">
             </div>
 
@@ -116,7 +119,7 @@
             <p> We are the Co-WorkIn space for entrepreneurs, professionals and
                 freelancers who want to collaborate, work and innovate with
                 other doers. Create, run or grow your business in our space with
-                all the perks included. Perfectly located at Ave. Mu&ntildeoz
+                all the perks included. Perfectly located at Ave. Mu&ntilde;oz
                 Rivera, steps from Hato Rey and the UPR-RP ecosystem.
             </p>
         </div>
@@ -129,37 +132,42 @@
             <h2>Facilities and Perks</h2>
             <p class="lowbar">&#x2594;</p>
             <div class="perk-box pb1">
-                <div><img src="icons/fully-furnished.png"></div>
+                <div><img src="icons/fully-furnished.png" alt="desk icon"></div>
                 <div class="perk-text">Fully Furnished</div>
             </div>
 
             <div class="perk-box pb2">
-                <div><img src="icons/conference-rooms.png"></div>
+                <div><img src="icons/conference-rooms.png" alt="whiteboard
+                    icon"></div>
                 <div class="perk-text">Conference Rooms</div>
             </div>
             <div class="perk-box pb3">
-                <div><img src="icons/corporate-address.png"></div>
+                <div><img src="icons/corporate-address.png"
+                    alt="building icon"></div>
                 <div class="perk-text">Corporate Address</div>
             </div>
 
             <div class="perk-box pb4">
-                <div><img src="icons/mailing-service.png"></div>
+                <div><img src="icons/mailing-service.png"
+                    alt="envelope icon"></div>
                 <div class="perk-text">Mailing Service</div>
             </div>
             <div class="perk-box pb5">
-                <div><img src="icons/fiber-optic-internet.png"></div>
+                <div>
+                    <img src="icons/fiber-optic-internet.png" alt="WiFi icon">
+                </div>
                 <div class="perk-text">Fiber Optic Internet</div>
             </div>
             <div class="perk-box pb6">
-                <div><img src="icons/parking.png"></div>
+                <div><img src="icons/parking.png" alt="Garage icon"></div>
                 <div class="perk-text">Parking</div>
             </div>
             <div class="perk-box pb7">
-                <div><img src="icons/coffee.png"></div>
+                <div><img src="icons/coffee.png" alt="Coffee mug icon"></div>
                 <div class="perk-text">Coffee</div>
             </div>
             <div class="perk-box pb8">
-                <div><img src="icons/copiers.png"></div>
+                <div><img src="icons/copiers.png" alt="Printer icon"></div>
                 <div class="perk-text">Copiers</div>
             </div>
             <p class="extra-bottom-border-perks"></p>
@@ -172,33 +180,34 @@
             <p class="lowbar">&#x2594;</p>
 
             <div class="pricing-box pricing-box-1">
-                <h3 id='option-pricing-title'>Co-Working</h3>
-                <p id='starting-at'>Price:</p>
-                <span id='starting-price'>$150</span>
+                <h3 class='option-pricing-title'>Co-Working</h3>
+                <p>Price:</p>
+                <span class='starting-price'>$150</span>
                 <p>per month</p>
-                <p id='price-description'>
+                <p class='price-description'>
                     <em>Get unlimited access to our open area, which includes:
+                    </em>
                     <ul>
-                        <li>&nbsp single desks</li>
-                        <li>&nbsp paired desks</li>
-                        <li>&nbsp group tables</li>
-                        <li>&nbsp sofa lounge</li>
-                        <li>&nbsp conference rooms</li>
+                        <li>&nbsp; single desks</li>
+                        <li>&nbsp; paired desks</li>
+                        <li>&nbsp; group tables</li>
+                        <li>&nbsp; sofa lounge</li>
+                        <li>&nbsp; conference rooms</li>
                     </ul>
                     </em>
                 </p>
-                <p id='price-description' class='less-bottom-padding'>
+                <p class='price-description' class='less-bottom-padding'>
                     All perks are included. Just drop-in and <em>get
                     WorkIn</em>.
                 </p>
             </div>
 
             <div class="pricing-box pricing-box-2">
-                <h3 id='option-pricing-title'>Private Suites</h3>
-                <p id='starting-at'>Starting at:</p>
-                <span id='starting-price'>$500</span>
+                <h3 class='option-pricing-title'>Private Suites</h3>
+                <p>Starting at:</p>
+                <span class='starting-price'>$500</span>
                 <p>per month</p>
-                <p id='price-description'>
+                <p class='price-description'>
                     <em>Fully furnished 10' x 12' offices with all the
                     perks included and access to our co-working community.</em>
                 </p>
@@ -212,27 +221,29 @@
         <div id="photos" class="black-background minimum-width">
             <span class="photos-section">
                 <img src="images/mobile-images/workin_8-web.jpg"
-                id='extra-photos'>
+                class="extra-photos"
+                alt="Lounge desk with a MacBook Pro on top">
             </span>
             <span class="photos-section">
                 <img src="images/mobile-images/workin_14-web.jpg"
-                id='extra-photos'>
+                alt="Suite desk layout and setup" class="extra-photos">
             </span>
             <span class="photos-section">
                 <img src="images/mobile-images/workin_18-web.jpg"
-                id='extra-photos'>
+                alt="Co-working area paired desk" class="extra-photos">
             </span>
             <span class="photos-section">
                 <img src="images/mobile-images/workin_2-web.jpg"
-                id='extra-photos'>
+                alt="Co-working area lounge area, desks, tabled and space
+                layout" class="extra-photos">
             </span>
             <span class="photos-section">
                 <img src="images/mobile-images/workin_10-web.jpg"
-                id='extra-photos'>
+                alt="Individual desks (6)" class="extra-photos">
             </span>
             <span class="photos-section">
                 <img src="images/mobile-images/workin_15-web.jpg"
-                id='extra-photos'>
+                alt="Empty suite ready to be furnished" class="extra-photos">
             </span>
         </div>
 
@@ -255,10 +266,10 @@
                 Suite 301 <br>
                 San Juan, PR 00927 <br><br>
 
-                <div> Like us on: &nbsp
+                <div> Like us on: &nbsp;
                     <a href="https://www.facebook.com/workinpr/"
                         target="_blank"><img src="icons/facebook.png"
-                        height="30" width="30"/>
+                        alt="Facebook icon" height="30" width="30"/>
                     </a>
                 </div>
             </div>
@@ -267,7 +278,7 @@
     </div>
 
     <div class='footer'>
-        <p class='footer-text'> Copyright &copy 2018, WorkIn. All Rights Reserved.
+        <p class='footer-text'> Copyright &copy; 2018, WorkIn. All Rights Reserved.
         </p>
     </div>
 
