Final touches of the HTML to change using the validator tool to help find errors

--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
                     </ul>
                     </em>
                 </p>
-                <p class='price-description' class='less-bottom-padding'>
+                <p class="price-description">
                     All perks are included. Just drop-in and <em>get
                     WorkIn</em>.
                 </p>
@@ -262,7 +262,7 @@
                 </a> <br><br>
                 Phone number: <br>
                 (787) 249-7373 <br><br>
-                Ave. Mu&ntildeoz Rivera 898 <br>
+                Ave. Mu&ntilde;oz Rivera 898 <br>
                 Suite 301 <br>
                 San Juan, PR 00927 <br><br>
 
