Changing meta info for HTML Validator

--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 
 
 <head>
-    <meta charset="UTF-8" name="viewport" content="width=device-width,
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width,
         initial-scale=1.0">
     <meta name="google-site-verification"
         content="HM-AEeXPwQDM4A7gQtKbFoMC1uhHqL-nVbD1wu7L_Js" />
@@ -186,14 +187,14 @@
                 <p>per month</p>
                 <p class='price-description'>
                     <em>Get unlimited access to our open area, which includes:
-                    <ul>
-                        <li>&nbsp; single desks</li>
-                        <li>&nbsp; paired desks</li>
-                        <li>&nbsp; group tables</li>
-                        <li>&nbsp; sofa lounge</li>
-                        <li>&nbsp; conference rooms</li>
-                    </ul>
                     </em>
+                    <ul>
+                        <li><em>&nbsp; single desks</em></li>
+                        <li><em>&nbsp; paired desks</em></li>
+                        <li><em>&nbsp; group tables</em></li>
+                        <li><em>&nbsp; sofa lounge</em></li>
+                        <li><em>&nbsp; conference rooms</em></li>
+                    </ul>
                 </p>
                 <p class="price-description">
                     All perks are included. Just drop-in and <em>get
