--- a/index.html
+++ b/index.html
@@ -314,7 +314,10 @@
     </script>
 
     <script src="scripts/googlemaps.js"></script>
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBgJdXBPvMtuJ8UT4SB_EbSkNfbj7zUNFA&callback=myMap"></script>
+    <script async defer
+        src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBgJdXBPvMtuJ8UT4SB_EbSkNfbj7zUNFA&callback=initMap"
+        type="text/javascript">
+    </script>
 </body>
 
 
