Removing Google meta tag to remove JJ's ownership account with gmail.

--- a/index.html
+++ b/index.html
@@ -6,9 +6,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width,
         initial-scale=1.0">
-    <meta name="google-site-verification"
-        content="HM-AEeXPwQDM4A7gQtKbFoMC1uhHqL-nVbD1wu7L_Js" />
-    <title>WorkIn</title>
+
+    <title>WorkIn - Co-Working Space and Suites</title>
     <link type="text/css" rel="stylesheet" href="style.css">
 
     <!-- Load an icon library to show a hamburger menu (bars) on small screens -->
@@ -314,10 +313,10 @@
     </script>
 
     <script src="scripts/googlemaps.js"></script>
-    <script async defer
-        src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBgJdXBPvMtuJ8UT4SB_EbSkNfbj7zUNFA&callback=initMap"
-        type="text/javascript">
+    <script
+        src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBgJdXBPvMtuJ8UT4SB_EbSkNfbj7zUNFA&callback=myMap">
     </script>
+
 </body>
 
 
