Verifying site in Google Search Console

--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <meta name="viewport" content="width=device-width,
         initial-scale=1.0">
 
+    <meta name="google-site-verification" content="Zf83g201M46XQKYvMNVBja2STIH7IiMftwwgSN4BxrQ" />
+
     <title>WorkIn - Co-Working Space and Suites</title>
     <link type="text/css" rel="stylesheet" href="style.css">
 
