Change order of googlemap.js and Google Maps API lines of code in index.html gs

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 
     <meta name="google-site-verification" content="Zf83g201M46XQKYvMNVBja2STIH7IiMftwwgSN4BxrQ" />
 
+
     <title>WorkIn - Co-Working Space and Suites</title>
     <link type="text/css" rel="stylesheet" href="style.css">
 
@@ -314,10 +315,9 @@
         }
     </script>
 
-    <script src="scripts/googlemaps.js"></script>
     <script
-        src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBgJdXBPvMtuJ8UT4SB_EbSkNfbj7zUNFA&callback=myMap">
-    </script>
+        src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBgJdXBPvMtuJ8UT4SB_EbSkNfbj7zUNFA&callback=myMap"></script>
+    <script src="scripts/googlemaps.js"></script>
 
 </body>
 
