--- a/index.html
+++ b/index.html
@@ -315,9 +315,8 @@
         }
     </script>
 
-    <script
-        src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBgJdXBPvMtuJ8UT4SB_EbSkNfbj7zUNFA&callback=myMap"></script>
     <script src="scripts/googlemaps.js"></script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBgJdXBPvMtuJ8UT4SB_EbSkNfbj7zUNFA&callback=myMap"></script>
 
 </body>
 
