--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
     <div class='content'>
         <div class="table-row slideshow-container">
             <div class='introduction-text'>
-                Co-Working Space and Private Suites in San Juan, PR.
+                All-Inclusive Private Suites In San Juan, PR.
             </div>
 
             <div class="slideshow" id="top">
@@ -119,11 +119,12 @@
             <h2>About Us</h2>
             <p class="lowbar">&#x2594;</p>
 
-            <p> We are the Co-WorkIn space for entrepreneurs, professionals and
-                freelancers who want to collaborate, work and innovate with
-                other doers. Create, run or grow your business in our space with
-                all the perks included. Perfectly located at Ave. Mu&ntilde;oz
-                Rivera, steps from Hato Rey and the UPR-RP ecosystem.
+            <p>
+                We offer all-inclusive private suites for entrepreneurs, professionals
+                and freelancers who want to create, run or grow their business in an
+                innovative environment at a much less cost than traditional offices.
+                Perfectly located at Ave. Mu&ntilde;oz Rivera, steps from Hato Rey and
+                the UPR-RP ecosystem.
             </p>
         </div>
 
@@ -183,24 +184,22 @@
             <p class="lowbar">&#x2594;</p>
 
             <div class="pricing-box pricing-box-1">
-                <h3 class='option-pricing-title'>Co-Working</h3>
+                <h3 class='option-pricing-title'>Private Desk</h3>
                 <p>Price:</p>
                 <span class='starting-price'>$150</span>
                 <p>per month</p>
                 <p class='price-description'>
-                    <em>Get unlimited access to our open area, which includes:
+                    <em>
+                        Get your own desk and access to our co-working open area, which includes:
                     </em>
                     <ul>
-                        <li><em>&nbsp; single desks</em></li>
-                        <li><em>&nbsp; paired desks</em></li>
                         <li><em>&nbsp; group tables</em></li>
                         <li><em>&nbsp; sofa lounge</em></li>
                         <li><em>&nbsp; conference rooms</em></li>
                     </ul>
                 </p>
                 <p class="price-description">
-                    All perks are included. Just drop-in and <em>get
-                    WorkIn</em>.
+                    All perks are included. Just drop-in and <em>get WorkIn</em>.
                 </p>
             </div>
 
@@ -210,8 +209,10 @@
                 <span class='starting-price'>$500</span>
                 <p>per month</p>
                 <p class='price-description'>
-                    <em>Fully furnished 10' x 12' offices with all the
-                    perks included and access to our co-working community.</em>
+                    <em>Fully furnished private offices with all the
+                    perks INCLUDED: Water, Electricity, Fiber Optic Internet, Conference Rooms,
+                    Corporate Address, Mailing Service, Parking, Coffee, Printer and unlimited
+                    access to our co-working open area.</em>
                 </p>
                 <p class='pricing-more-padding'>.</p>
             </div>
