Change styling for Pricing - private suites section - lower bottom padding

--- a/index.html
+++ b/index.html
@@ -210,8 +210,10 @@
                 <p>per month</p>
                 <p class='price-description'>
                     <em>Fully furnished private offices with all the
-                    perks INCLUDED: Water, Electricity, Fiber Optic Internet, Conference Rooms,
-                    Corporate Address, Mailing Service, Parking, Coffee, Printer and unlimited
+                    perks INCLUDED: 
+                    <br>
+                    ✓ Water ✓ Electricity ✓ Fiber Optic Internet ✓ Conference Rooms
+                    ✓ Corporate Address ✓ Mailing Service ✓ Parking ✓ Coffee ✓ Printer and unlimited
                     access to our co-working open area.</em>
                 </p>
                 <p class='pricing-more-padding'>.</p>
