Add one checkmark to pricing section

--- a/index.html
+++ b/index.html
@@ -213,8 +213,8 @@
                     perks INCLUDED: 
                     <br>
                     ✓ Water ✓ Electricity ✓ Fiber Optic Internet ✓ Conference Rooms
-                    ✓ Corporate Address ✓ Mailing Service ✓ Parking ✓ Coffee ✓ Printer and unlimited
-                    access to our co-working open area.</em>
+                    ✓ Corporate Address ✓ Mailing Service ✓ Parking ✓ Coffee ✓ Printer
+                    <br> ✓ Unlimited access to our co-working open area.</em>
                 </p>
                 <p class='pricing-more-padding'>.</p>
             </div>
