Add "Office" for "Private Office Suites"

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
     <div class='content'>
         <div class="table-row slideshow-container">
             <div class='introduction-text'>
-                All-Inclusive Private Suites In San Juan, PR.
+                All-Inclusive Private Office Suites In San Juan, PR.
             </div>
 
             <div class="slideshow" id="top">
