--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta name="google-site-verification" content="Zf83g201M46XQKYvMNVBja2STIH7IiMftwwgSN4BxrQ" />
 
 
-    <title>WorkIn - Co-Working Space and Suites</title>
+    <title>WorkIn - Private Office Suites</title>
     <link type="text/css" rel="stylesheet" href="style.css">
 
     <!-- Load an icon library to show a hamburger menu (bars) on small screens -->
@@ -95,7 +95,7 @@
             </div>
 
             <div class="slideshow">
-                <img src="images/mobile-images/workin_5-web.jpg"
+                <img src="images/mobile-images/workin_2023-03-15-common-area.jpg"
                     alt="WorkIn co-working desk area"
                     style="width:100%;height:90%">
             </div>
@@ -120,10 +120,10 @@
             <p class="lowbar">&#x2594;</p>
 
             <p>
-                We offer all-inclusive private suites for entrepreneurs, professionals
+                We offer all-inclusive private office suites for entrepreneurs, professionals,
                 and freelancers who want to create, run or grow their business in an
                 innovative environment at a much less cost than traditional offices.
-                Perfectly located at Ave. Mu&ntilde;oz Rivera, steps from Hato Rey and
+                Perfectly located at Ave. Muñoz Rivera, steps from Hato Rey and
                 the UPR-RP ecosystem.
             </p>
         </div>
@@ -184,37 +184,19 @@
             <p class="lowbar">&#x2594;</p>
 
             <div class="pricing-box pricing-box-1">
-                <h3 class='option-pricing-title'>Private Desk</h3>
-                <p>Price:</p>
-                <span class='starting-price'>$150</span>
-                <p>per month</p>
-                <p class='price-description'>
-                    <em>
-                        Get your own desk and access to our co-working open area, which includes:
-                    </em>
-                    <ul>
-                        <li><em>&nbsp; group tables</em></li>
-                        <li><em>&nbsp; sofa lounge</em></li>
-                        <li><em>&nbsp; conference rooms</em></li>
-                    </ul>
-                </p>
-                <p class="price-description">
-                    All perks are included. Just drop-in and <em>get WorkIn</em>.
-                </p>
-            </div>
-
-            <div class="pricing-box pricing-box-2">
                 <h3 class='option-pricing-title'>Private Suites</h3>
                 <p>Starting at:</p>
                 <span class='starting-price'>$600</span>
                 <p>per month</p>
                 <p class='price-description'>
-                    <em>Fully furnished private offices with all the
-                    perks INCLUDED: 
+                    <em>Includes: 
                     <br>
-                    ✓ Water ✓ Electricity ✓ Fiber Optic Internet ✓ Conference Rooms
-                    ✓ Corporate Address ✓ Mailing Service ✓ Parking ✓ Coffee ✓ Printer
-                    <br> ✓ Unlimited access to our co-working open area.</em>
+                    <br>
+                    ✓ Water 
+                    ✓ Electricity ✓ Fiber Optic Internet ✓ Conference Rooms
+                    <br>
+                    ✓ Corporate Address ✓ Mailing Service ✓ Parking ✓ Printer
+                    <br> ✓ Unlimited access to our common areas.</em>
                 </p>
                 <p class='pricing-more-padding'>.</p>
             </div>
@@ -230,21 +212,20 @@
                 alt="Lounge desk with a MacBook Pro on top">
             </span>
             <span class="photos-section">
+                <img src="images/mobile-images/workin_2023-03-15-conference-room-web.jpg"
+                alt="Workin spacious conference room" class="extra-photos">
+            </span>
+            <span class="photos-section">
                 <img src="images/mobile-images/workin_14-web.jpg"
                 alt="Suite desk layout and setup" class="extra-photos">
             </span>
             <span class="photos-section">
-                <img src="images/mobile-images/workin_18-web.jpg"
-                alt="Co-working area paired desk" class="extra-photos">
+                <img src="images/mobile-images/workin_2023-03-15-lideres-web.jpg"
+                alt="Líderes online school" class="extra-photos">
             </span>
             <span class="photos-section">
-                <img src="images/mobile-images/workin_2-web.jpg"
-                alt="Co-working area lounge area, desks, tabled and space
-                layout" class="extra-photos">
-            </span>
-            <span class="photos-section">
-                <img src="images/mobile-images/workin_10-web.jpg"
-                alt="Individual desks (6)" class="extra-photos">
+                <img src="images/mobile-images/workin_2023-03-15-common-area.jpg"
+                alt="Workin suites nice common area with industrial printer" class="extra-photos">
             </span>
             <span class="photos-section">
                 <img src="images/mobile-images/workin_15-web.jpg"
@@ -282,10 +263,7 @@
 
     </div>
 
-    <div class='footer'>
-        <p class='footer-text'> Copyright &copy; 2019, WorkIn. All Rights Reserved.
-        </p>
-    </div>
+    <div class='footer'><p class='footer-text' id='footer-text-id'></p></div>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="scripts/scroll.js"></script>
@@ -296,26 +274,29 @@
         var slideIndex = 0;
         showSlides();
         function showSlides() {
-            var i;
-            var slides = document.getElementsByClassName("slideshow");
+            let slides = document.getElementsByClassName("slideshow")
+
             header.classList.add("sticky");
-            for (i = 0; i < slides.length; i++) {
+            for (let i = 0; i < slides.length; i++) {
                 slides[i].style.display = "none";
             }
-            slideIndex++;
+            slideIndex++
+
             if (slideIndex > slides.length) {
-                slideIndex = 1;
+                slideIndex = 1
             }
-            slides[slideIndex-1].style.display = "block";
+
+            slides[slideIndex - 1].style.display = "block"
             setTimeout(showSlides, 4000); // Change image every 4 seconds
         }
-        function openNav() {
-            document.getElementById("mySidenav").style.width = "250px";
-            document.getElementById("mySidenav").style.display = "block";
+        const openNav = () => {
+            document.getElementById("mySidenav").style.width = "250px"
+            document.getElementById("mySidenav").style.display = "block"
         }
-        function closeNav() {
-            document.getElementById("mySidenav").style.width = "0";
-        }
+
+        const closeNav = () => document.getElementById("mySidenav").style.width = "0"
+
+        document.getElementById('footer-text-id').innerText = "Copyright © " + new Date().getFullYear() + ", WorkIn. All Rights Reserved."
     </script>
 
     <script src="scripts/googlemaps.js"></script>
